# zk-tinyvm

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: add.rs  int_table.rs  zk_tinyvm.rs
tinyvm/: Cargo.toml
tinyvm/src/: main.rs
