[package]
name = "halo2app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
# halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = "be955686f86eb618f55d2320c0e042485b313d22"}
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }

# halo2curves = "0.4.0"

plotters = { version = "0.3.0", optional = true }
